--- a/classes/drawing.bufferdrawingcontext.html
+++ b/classes/drawing.bufferdrawingcontext.html
@@ -109,6 +109,7 @@
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-not-exported"><a href="drawing.bufferdrawingcontext.html#drawtext" class="tsd-kind-icon">draw<wbr>Text</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-not-exported"><a href="drawing.bufferdrawingcontext.html#nobrush" class="tsd-kind-icon">no<wbr>Brush</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-not-exported"><a href="drawing.bufferdrawingcontext.html#nopen" class="tsd-kind-icon">no<wbr>Pen</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-not-exported"><a href="drawing.bufferdrawingcontext.html#placehighlight" class="tsd-kind-icon">place<wbr>Highlight</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-not-exported"><a href="drawing.bufferdrawingcontext.html#pop" class="tsd-kind-icon">pop</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-not-exported"><a href="drawing.bufferdrawingcontext.html#pushclip" class="tsd-kind-icon">push<wbr>Clip</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-not-exported"><a href="drawing.bufferdrawingcontext.html#pushopacity" class="tsd-kind-icon">push<wbr>Opacity</a></li>
@@ -132,7 +133,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:269</li>
+									<li>Defined in drawing/drawing.ts:293</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -159,7 +160,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#close">close</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:430</li>
+									<li>Defined in drawing/drawing.ts:489</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -177,7 +178,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#drawdrawing">drawDrawing</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:353</li>
+									<li>Defined in drawing/drawing.ts:377</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -204,7 +205,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#drawellipse">drawEllipse</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:298</li>
+									<li>Defined in drawing/drawing.ts:322</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -234,7 +235,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#drawgeometry">drawGeometry</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:305</li>
+									<li>Defined in drawing/drawing.ts:329</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -261,7 +262,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#drawimage">drawImage</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:340</li>
+									<li>Defined in drawing/drawing.ts:364</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -288,7 +289,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#drawline">drawLine</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:275</li>
+									<li>Defined in drawing/drawing.ts:299</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -315,7 +316,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#drawlines">drawLines</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:281</li>
+									<li>Defined in drawing/drawing.ts:305</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -339,7 +340,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#drawrectangle">drawRectangle</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:290</li>
+									<li>Defined in drawing/drawing.ts:314</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -372,7 +373,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#drawtext">drawText</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:321</li>
+									<li>Defined in drawing/drawing.ts:345</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -399,7 +400,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#nobrush">noBrush</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:395</li>
+									<li>Defined in drawing/drawing.ts:422</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -417,9 +418,36 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#nopen">noPen</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:378</li>
+									<li>Defined in drawing/drawing.ts:405</li>
 								</ul>
 							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-not-exported">
+					<a name="placehighlight" class="tsd-anchor"></a>
+					<h3>place<wbr>Highlight</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-not-exported">
+						<li class="tsd-signature tsd-kind-icon">place<wbr>Highlight<span class="tsd-signature-symbol">(</span>highlight<span class="tsd-signature-symbol">: </span><a href="drawing.highlight.html" class="tsd-signature-type">Highlight</a>, settings<span class="tsd-signature-symbol">?: </span><a href="../interfaces/drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#placehighlight">placeHighlight</a></p>
+								<ul>
+									<li>Defined in drawing/drawing.ts:476</li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>highlight: <a href="drawing.highlight.html" class="tsd-signature-type">Highlight</a></h5>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> settings: <a href="../interfaces/drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a></h5>
+								</li>
+							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
 					</ul>
@@ -435,7 +463,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#pop">pop</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:426</li>
+									<li>Defined in drawing/drawing.ts:466</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -453,7 +481,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#pushclip">pushClip</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:412</li>
+									<li>Defined in drawing/drawing.ts:444</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -477,7 +505,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#pushopacity">pushOpacity</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:421</li>
+									<li>Defined in drawing/drawing.ts:457</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -501,7 +529,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#pushtransform">pushTransform</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:400</li>
+									<li>Defined in drawing/drawing.ts:427</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -525,7 +553,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#setbrush">setBrush</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:383</li>
+									<li>Defined in drawing/drawing.ts:410</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -549,7 +577,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/drawing.drawingcontext.html">DrawingContext</a>.<a href="../interfaces/drawing.drawingcontext.html#setpen">setPen</a></p>
 								<ul>
-									<li>Defined in drawing/drawing.ts:366</li>
+									<li>Defined in drawing/drawing.ts:393</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -650,6 +678,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-not-exported">
 								<a href="drawing.bufferdrawingcontext.html#nopen" class="tsd-kind-icon">no<wbr>Pen</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-not-exported">
+								<a href="drawing.bufferdrawingcontext.html#placehighlight" class="tsd-kind-icon">place<wbr>Highlight</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-not-exported">
 								<a href="drawing.bufferdrawingcontext.html#pop" class="tsd-kind-icon">pop</a>
