--- a/classes/tooltips.tooltip.html
+++ b/classes/tooltips.tooltip.html
@@ -70,7 +70,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Represents the content of a tooltip.</p>
+						<p>Represents the content of a tooltip overlay.</p>
 					</div>
 				</div>
 			</section>
@@ -124,7 +124,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:99</li>
+									<li>Defined in tooltips.ts:57</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -160,7 +160,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:166</li>
+									<li>Defined in tooltips.ts:124</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -188,7 +188,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:139</li>
+									<li>Defined in tooltips.ts:97</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -225,7 +225,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:148</li>
+									<li>Defined in tooltips.ts:106</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -256,7 +256,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:157</li>
+									<li>Defined in tooltips.ts:115</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -287,7 +287,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:129</li>
+									<li>Defined in tooltips.ts:87</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -318,7 +318,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:177</li>
+									<li>Defined in tooltips.ts:135</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -387,9 +387,6 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../enums/tooltips.markertypeid.html" class="tsd-kind-icon">Marker<wbr>Type<wbr>Id</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="../enums/tooltips.tooltipitemid.html" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Id</a>
 					</li>
 					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
@@ -398,20 +395,8 @@
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="tooltips.characteristictooltipitem.html" class="tsd-kind-icon">Characteristic<wbr>Tooltip<wbr>Item</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="tooltips.geometrymarker.html" class="tsd-kind-icon">Geometry<wbr>Marker</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="tooltips.marker.html" class="tsd-kind-icon">Marker</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
-						<a href="tooltips.markerentry.html" class="tsd-kind-icon">Marker<wbr>Entry</a>
-					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="tooltips.measurementvaluetooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Value<wbr>Tooltip<wbr>Item</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="tooltips.pointmarker.html" class="tsd-kind-icon">Point<wbr>Marker</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="tooltips.texttooltipitem.html" class="tsd-kind-icon">Text<wbr>Tooltip<wbr>Item</a>
@@ -446,35 +431,17 @@
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="tooltips.tooltipcollection.html" class="tsd-kind-icon">Tooltip<wbr>Collection</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.geometrymarkercontent.html" class="tsd-kind-icon">Geometry<wbr>Marker<wbr>Content</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.geometrymarkerdescription.html" class="tsd-kind-icon">Geometry<wbr>Marker<wbr>Description</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.pointmarkercontent.html" class="tsd-kind-icon">Point<wbr>Marker<wbr>Content</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.pointmarkerdescription.html" class="tsd-kind-icon">Point<wbr>Marker<wbr>Description</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
-						<a href="../modules/tooltips.html#markerdescription" class="tsd-kind-icon">Marker<wbr>Description</a>
-					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../modules/tooltips.html#tooltipitem" class="tsd-kind-icon">Tooltip<wbr>Item</a>
 					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
+					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../modules/tooltips.html#tooltipitemtype" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/tooltips.html#activetooltips" class="tsd-kind-icon">active<wbr>Tooltips</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="../modules/tooltips.html#mapitemtype" class="tsd-kind-icon">map<wbr>Item<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="../modules/tooltips.html#placetooltip" class="tsd-kind-icon">place<wbr>Tooltip</a>
 					</li>
 				</ul>
 			</nav>
