--- a/interfaces/drawing.drawinginternals.html
+++ b/interfaces/drawing.drawinginternals.html
@@ -87,6 +87,8 @@
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="drawing.drawinginternals.html#bytecode" class="tsd-kind-icon">byte<wbr>Code</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="drawing.drawinginternals.html#depth" class="tsd-kind-icon">depth</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="drawing.drawinginternals.html#highlightbytecode" class="tsd-kind-icon">highlight<wbr>Byte<wbr>Code</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="drawing.drawinginternals.html#state" class="tsd-kind-icon">state</a></li>
 							</ul>
 						</section>
@@ -107,7 +109,27 @@
 					<div class="tsd-signature tsd-kind-icon">byte<wbr>Code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">BufferWriter</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/drawing.ts:259</li>
+							<li>Defined in drawing/drawing.ts:281</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+					<a name="depth" class="tsd-anchor"></a>
+					<h3>depth</h3>
+					<div class="tsd-signature tsd-kind-icon">depth<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in drawing/drawing.ts:284</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+					<a name="highlightbytecode" class="tsd-anchor"></a>
+					<h3>highlight<wbr>Byte<wbr>Code</h3>
+					<div class="tsd-signature tsd-kind-icon">highlight<wbr>Byte<wbr>Code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">BufferWriter</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in drawing/drawing.ts:282</li>
 						</ul>
 					</aside>
 				</section>
@@ -117,7 +139,7 @@
 					<div class="tsd-signature tsd-kind-icon">state<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">DrawingState.Initialized</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DrawingState.Opened</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DrawingState.Closed</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/drawing.ts:260</li>
+							<li>Defined in drawing/drawing.ts:283</li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +156,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:261</li>
+									<li>Defined in drawing/drawing.ts:285</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -196,6 +218,12 @@
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
 								<a href="drawing.drawinginternals.html#bytecode" class="tsd-kind-icon">byte<wbr>Code</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+								<a href="drawing.drawinginternals.html#depth" class="tsd-kind-icon">depth</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+								<a href="drawing.drawinginternals.html#highlightbytecode" class="tsd-kind-icon">highlight<wbr>Byte<wbr>Code</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
 								<a href="drawing.drawinginternals.html#state" class="tsd-kind-icon">state</a>
