--- a/modules/drawing.html
+++ b/modules/drawing.html
@@ -148,6 +148,7 @@ context.setPen( penDescription );
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private"><a href="../enums/drawing.fontweightid.html" class="tsd-kind-icon">Font<wbr>Weight<wbr>Id</a></li>
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private"><a href="../enums/drawing.geometrycombinemodeid.html" class="tsd-kind-icon">Geometry<wbr>Combine<wbr>Mode<wbr>Id</a></li>
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private"><a href="../enums/drawing.geometryid.html" class="tsd-kind-icon">Geometry<wbr>Id</a></li>
+								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported"><a href="../enums/drawing.highlightstackoperation.html" class="tsd-kind-icon">Highlight<wbr>Stack<wbr>Operation</a></li>
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private"><a href="../enums/drawing.horizontalanchorid.html" class="tsd-kind-icon">Horizontal<wbr>Anchor<wbr>Id</a></li>
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private"><a href="../enums/drawing.horizontalimageanchorid.html" class="tsd-kind-icon">Horizontal<wbr>Image<wbr>Anchor<wbr>Id</a></li>
 								<li class="tsd-kind-enum tsd-parent-kind-external-module tsd-is-private"><a href="../enums/drawing.horizontaltextalignmentid.html" class="tsd-kind-icon">Horizontal<wbr>Text<wbr>Alignment<wbr>Id</a></li>
@@ -184,6 +185,7 @@ context.setPen( penDescription );
 								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/drawing.geometry.html" class="tsd-kind-icon">Geometry</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/drawing.geometrydrawingsettings.html" class="tsd-kind-icon">Geometry<wbr>Drawing<wbr>Settings</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/drawing.geometrygroup.html" class="tsd-kind-icon">Geometry<wbr>Group</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/drawing.highlight.html" class="tsd-kind-icon">Highlight</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/drawing.identitytransform.html" class="tsd-kind-icon">Identity<wbr>Transform</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/drawing.imagedrawingsettings.html" class="tsd-kind-icon">Image<wbr>Drawing<wbr>Settings</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/drawing.linegeometry.html" class="tsd-kind-icon">Line<wbr>Geometry</a></li>
@@ -239,6 +241,7 @@ context.setPen( penDescription );
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/drawing.geometrygroupdescription.html" class="tsd-kind-icon">Geometry<wbr>Group<wbr>Description</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/drawing.geometrygroupgeometrydescription.html" class="tsd-kind-icon">Geometry<wbr>Group<wbr>Geometry<wbr>Description</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/drawing.geometrymeasurements.html" class="tsd-kind-icon">Geometry<wbr>Measurements</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/drawing.highlightdescription.html" class="tsd-kind-icon">Highlight<wbr>Description</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/drawing.identitytransformdescription.html" class="tsd-kind-icon">Identity<wbr>Transform<wbr>Description</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/drawing.imagedrawingsettingsdescription.html" class="tsd-kind-icon">Image<wbr>Drawing<wbr>Settings<wbr>Description</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/drawing.linedescription.html" class="tsd-kind-icon">Line<wbr>Description</a></li>
@@ -323,8 +326,8 @@ context.setPen( penDescription );
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Variables</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="drawing.html#renderprovider" class="tsd-kind-icon">render<wbr>Provider</a></li>
-								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported"><a href="drawing.html#renderprovider-1" class="tsd-kind-icon">render<wbr>Provider</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported"><a href="drawing.html#renderprovider" class="tsd-kind-icon">render<wbr>Provider</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="drawing.html#renderprovider-1" class="tsd-kind-icon">render<wbr>Provider</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported"><a href="drawing.html#renderprovider-2" class="tsd-kind-icon">render<wbr>Provider</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported"><a href="drawing.html#renderprovider-3" class="tsd-kind-icon">render<wbr>Provider</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported"><a href="drawing.html#renderprovider-4" class="tsd-kind-icon">render<wbr>Provider</a></li>
@@ -1122,30 +1125,8 @@ context.setPen( penDescription );
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Variables</h2>
-				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 					<a name="renderprovider" class="tsd-anchor"></a>
-					<h3>render<wbr>Provider</h3>
-					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in drawing/image/bitmap.ts:11</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-					<a name="renderprovider-1" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagPrivate">Private</span> render<wbr>Provider</h3>
-					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in drawing/drawing.ts:23</li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-					<a name="renderprovider-2" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagPrivate">Private</span> render<wbr>Provider</h3>
 					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
 					<aside class="tsd-sources">
@@ -1156,8 +1137,18 @@ context.setPen( penDescription );
 					<div class="tsd-comment tsd-typography">
 					</div>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="renderprovider-1" class="tsd-anchor"></a>
+					<h3>render<wbr>Provider</h3>
+					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in drawing/image/bitmap.ts:11</li>
+						</ul>
+					</aside>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-					<a name="renderprovider-3" class="tsd-anchor"></a>
+					<a name="renderprovider-2" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagPrivate">Private</span> render<wbr>Provider</h3>
 					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
 					<aside class="tsd-sources">
@@ -1169,12 +1160,24 @@ context.setPen( penDescription );
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-					<a name="renderprovider-4" class="tsd-anchor"></a>
+					<a name="renderprovider-3" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagPrivate">Private</span> render<wbr>Provider</h3>
 					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in drawing/text/font.ts:19</li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+					<a name="renderprovider-4" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagPrivate">Private</span> render<wbr>Provider</h3>
+					<div class="tsd-signature tsd-kind-icon">render<wbr>Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> =&nbsp;require.binding(&quot;RenderProvider&quot;)</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in drawing/drawing.ts:24</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -1922,6 +1925,9 @@ context.setPen( penDescription );
 					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
 						<a href="../enums/drawing.geometryid.html" class="tsd-kind-icon">Geometry<wbr>Id</a>
 					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="../enums/drawing.highlightstackoperation.html" class="tsd-kind-icon">Highlight<wbr>Stack<wbr>Operation</a>
+					</li>
 					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
 						<a href="../enums/drawing.horizontalanchorid.html" class="tsd-kind-icon">Horizontal<wbr>Anchor<wbr>Id</a>
 					</li>
@@ -2014,6 +2020,9 @@ context.setPen( penDescription );
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module">
 						<a href="../classes/drawing.geometrygroup.html" class="tsd-kind-icon">Geometry<wbr>Group</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module">
+						<a href="../classes/drawing.highlight.html" class="tsd-kind-icon">Highlight</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module">
 						<a href="../classes/drawing.identitytransform.html" class="tsd-kind-icon">Identity<wbr>Transform</a>
@@ -2164,6 +2173,9 @@ context.setPen( penDescription );
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="../interfaces/drawing.geometrymeasurements.html" class="tsd-kind-icon">Geometry<wbr>Measurements</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
+						<a href="../interfaces/drawing.highlightdescription.html" class="tsd-kind-icon">Highlight<wbr>Description</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="../interfaces/drawing.identitytransformdescription.html" class="tsd-kind-icon">Identity<wbr>Transform<wbr>Description</a>
@@ -2387,10 +2399,10 @@ context.setPen( penDescription );
 					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
 						<a href="drawing.html#verticaltextanchor" class="tsd-kind-icon">Vertical<wbr>Text<wbr>Anchor</a>
 					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="drawing.html#renderprovider" class="tsd-kind-icon">render<wbr>Provider</a>
 					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="drawing.html#renderprovider-1" class="tsd-kind-icon">render<wbr>Provider</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
