--- a/modules/tooltips.knownclassnames.html
+++ b/modules/tooltips.knownclassnames.html
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">actual<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"ActualValue"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;ActualValue&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:356</li>
+							<li>Defined in tooltips.ts:309</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -125,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">audit<wbr>Function<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"AuditFunction"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;AuditFunction&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:331</li>
+							<li>Defined in tooltips.ts:284</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -140,7 +140,7 @@
 					<div class="tsd-signature tsd-kind-icon">cad<wbr>Position<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"CadPosition"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;CadPosition&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:371</li>
+							<li>Defined in tooltips.ts:324</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -155,7 +155,7 @@
 					<div class="tsd-signature tsd-kind-icon">characteristic<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"Characteristic"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;Characteristic&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:326</li>
+							<li>Defined in tooltips.ts:279</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -170,7 +170,7 @@
 					<div class="tsd-signature tsd-kind-icon">control<wbr>Limits<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"ControlLimits"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;ControlLimits&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:346</li>
+							<li>Defined in tooltips.ts:299</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -185,7 +185,7 @@
 					<div class="tsd-signature tsd-kind-icon">measurement<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"Measurement"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;Measurement&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:316</li>
+							<li>Defined in tooltips.ts:269</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -200,7 +200,7 @@
 					<div class="tsd-signature tsd-kind-icon">measurement<wbr>Values<wbr>Count<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"MeasurementValuesCount"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;MeasurementValuesCount&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:321</li>
+							<li>Defined in tooltips.ts:274</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -215,7 +215,7 @@
 					<div class="tsd-signature tsd-kind-icon">navigation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"NAVIGATELINE"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;NAVIGATELINE&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:311</li>
+							<li>Defined in tooltips.ts:264</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -230,7 +230,7 @@
 					<div class="tsd-signature tsd-kind-icon">nominal<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"NominalValue"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;NominalValue&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:361</li>
+							<li>Defined in tooltips.ts:314</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -245,7 +245,7 @@
 					<div class="tsd-signature tsd-kind-icon">scrap<wbr>Limits<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"ScrapLimits"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;ScrapLimits&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:351</li>
+							<li>Defined in tooltips.ts:304</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -260,7 +260,7 @@
 					<div class="tsd-signature tsd-kind-icon">tolerance<wbr>Limits<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"Tolerance"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;Tolerance&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:336</li>
+							<li>Defined in tooltips.ts:289</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -275,7 +275,7 @@
 					<div class="tsd-signature tsd-kind-icon">tolerance<wbr>Usage<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"ToleranceUsage"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;ToleranceUsage&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:366</li>
+							<li>Defined in tooltips.ts:319</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -290,7 +290,7 @@
 					<div class="tsd-signature tsd-kind-icon">warning<wbr>Limits<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"Warning"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;Warning&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:341</li>
+							<li>Defined in tooltips.ts:294</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -312,7 +312,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:376</li>
+									<li>Defined in tooltips.ts:329</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
