--- a/classes/tooltips.texttooltipitem.html
+++ b/classes/tooltips.texttooltipitem.html
@@ -124,7 +124,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:238</li>
+									<li>Defined in tooltips.ts:191</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -152,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">class<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:238</li>
+							<li>Defined in tooltips.ts:191</li>
 						</ul>
 					</aside>
 				</section>
@@ -162,7 +162,7 @@
 					<div class="tsd-signature tsd-kind-icon">text<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:236</li>
+							<li>Defined in tooltips.ts:189</li>
 						</ul>
 					</aside>
 				</section>
@@ -172,7 +172,7 @@
 					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <a href="../modules/tooltips.html#tooltipitemtype" class="tsd-signature-type">TooltipItemType</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:237</li>
+							<li>Defined in tooltips.ts:190</li>
 						</ul>
 					</aside>
 				</section>
@@ -189,7 +189,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in tooltips/tooltip_collection.ts:247</li>
+									<li>Defined in tooltips.ts:200</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -256,9 +256,6 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="../enums/tooltips.markertypeid.html" class="tsd-kind-icon">Marker<wbr>Type<wbr>Id</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="../enums/tooltips.tooltipitemid.html" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Id</a>
 					</li>
 					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
@@ -267,20 +264,8 @@
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="tooltips.characteristictooltipitem.html" class="tsd-kind-icon">Characteristic<wbr>Tooltip<wbr>Item</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="tooltips.geometrymarker.html" class="tsd-kind-icon">Geometry<wbr>Marker</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="tooltips.marker.html" class="tsd-kind-icon">Marker</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
-						<a href="tooltips.markerentry.html" class="tsd-kind-icon">Marker<wbr>Entry</a>
-					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="tooltips.measurementvaluetooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Value<wbr>Tooltip<wbr>Item</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="tooltips.pointmarker.html" class="tsd-kind-icon">Point<wbr>Marker</a>
 					</li>
 				</ul>
 				<ul class="current">
@@ -309,35 +294,17 @@
 					<li class=" tsd-kind-class tsd-parent-kind-external-module">
 						<a href="tooltips.tooltip.html" class="tsd-kind-icon">Tooltip</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="tooltips.tooltipcollection.html" class="tsd-kind-icon">Tooltip<wbr>Collection</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.geometrymarkercontent.html" class="tsd-kind-icon">Geometry<wbr>Marker<wbr>Content</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.geometrymarkerdescription.html" class="tsd-kind-icon">Geometry<wbr>Marker<wbr>Description</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.pointmarkercontent.html" class="tsd-kind-icon">Point<wbr>Marker<wbr>Content</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.pointmarkerdescription.html" class="tsd-kind-icon">Point<wbr>Marker<wbr>Description</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
-						<a href="../modules/tooltips.html#markerdescription" class="tsd-kind-icon">Marker<wbr>Description</a>
-					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../modules/tooltips.html#tooltipitem" class="tsd-kind-icon">Tooltip<wbr>Item</a>
 					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
+					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../modules/tooltips.html#tooltipitemtype" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/tooltips.html#activetooltips" class="tsd-kind-icon">active<wbr>Tooltips</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="../modules/tooltips.html#mapitemtype" class="tsd-kind-icon">map<wbr>Item<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="../modules/tooltips.html#placetooltip" class="tsd-kind-icon">place<wbr>Tooltip</a>
 					</li>
 				</ul>
 			</nav>
