--- a/enums/tooltips.tooltipitemtypeid.html
+++ b/enums/tooltips.tooltipitemtypeid.html
@@ -94,7 +94,7 @@
 					<div class="tsd-signature tsd-kind-icon">Collapsable<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:203</li>
+							<li>Defined in tooltips.ts:161</li>
 						</ul>
 					</aside>
 				</section>
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">Fallback<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:205</li>
+							<li>Defined in tooltips.ts:163</li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">Fixed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in tooltips/tooltip_collection.ts:204</li>
+							<li>Defined in tooltips.ts:162</li>
 						</ul>
 					</aside>
 				</section>
@@ -172,9 +172,6 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
-						<a href="tooltips.markertypeid.html" class="tsd-kind-icon">Marker<wbr>Type<wbr>Id</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="tooltips.tooltipitemid.html" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Id</a>
 					</li>
 				</ul>
@@ -198,20 +195,8 @@
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="../classes/tooltips.characteristictooltipitem.html" class="tsd-kind-icon">Characteristic<wbr>Tooltip<wbr>Item</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="../classes/tooltips.geometrymarker.html" class="tsd-kind-icon">Geometry<wbr>Marker</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="../classes/tooltips.marker.html" class="tsd-kind-icon">Marker</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
-						<a href="../classes/tooltips.markerentry.html" class="tsd-kind-icon">Marker<wbr>Entry</a>
-					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="../classes/tooltips.measurementvaluetooltipitem.html" class="tsd-kind-icon">Measurement<wbr>Value<wbr>Tooltip<wbr>Item</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="../classes/tooltips.pointmarker.html" class="tsd-kind-icon">Point<wbr>Marker</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="../classes/tooltips.texttooltipitem.html" class="tsd-kind-icon">Text<wbr>Tooltip<wbr>Item</a>
@@ -219,35 +204,17 @@
 					<li class=" tsd-kind-class tsd-parent-kind-external-module">
 						<a href="../classes/tooltips.tooltip.html" class="tsd-kind-icon">Tooltip</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
-						<a href="../classes/tooltips.tooltipcollection.html" class="tsd-kind-icon">Tooltip<wbr>Collection</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.geometrymarkercontent.html" class="tsd-kind-icon">Geometry<wbr>Marker<wbr>Content</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.geometrymarkerdescription.html" class="tsd-kind-icon">Geometry<wbr>Marker<wbr>Description</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.pointmarkercontent.html" class="tsd-kind-icon">Point<wbr>Marker<wbr>Content</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="../interfaces/tooltips.pointmarkerdescription.html" class="tsd-kind-icon">Point<wbr>Marker<wbr>Description</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
-						<a href="../modules/tooltips.html#markerdescription" class="tsd-kind-icon">Marker<wbr>Description</a>
-					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../modules/tooltips.html#tooltipitem" class="tsd-kind-icon">Tooltip<wbr>Item</a>
 					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
+					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../modules/tooltips.html#tooltipitemtype" class="tsd-kind-icon">Tooltip<wbr>Item<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
-						<a href="../modules/tooltips.html#activetooltips" class="tsd-kind-icon">active<wbr>Tooltips</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
 						<a href="../modules/tooltips.html#mapitemtype" class="tsd-kind-icon">map<wbr>Item<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="../modules/tooltips.html#placetooltip" class="tsd-kind-icon">place<wbr>Tooltip</a>
 					</li>
 				</ul>
 			</nav>
