--- a/interfaces/drawing.drawingcontext.html
+++ b/interfaces/drawing.drawingcontext.html
@@ -106,6 +106,7 @@
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="drawing.drawingcontext.html#drawtext" class="tsd-kind-icon">draw<wbr>Text</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="drawing.drawingcontext.html#nobrush" class="tsd-kind-icon">no<wbr>Brush</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="drawing.drawingcontext.html#nopen" class="tsd-kind-icon">no<wbr>Pen</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="drawing.drawingcontext.html#placehighlight" class="tsd-kind-icon">place<wbr>Highlight</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="drawing.drawingcontext.html#pop" class="tsd-kind-icon">pop</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="drawing.drawingcontext.html#pushclip" class="tsd-kind-icon">push<wbr>Clip</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="drawing.drawingcontext.html#pushopacity" class="tsd-kind-icon">push<wbr>Opacity</a></li>
@@ -129,7 +130,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:139</li>
+									<li>Defined in drawing/drawing.ts:147</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -151,7 +152,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:86</li>
+									<li>Defined in drawing/drawing.ts:87</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -183,7 +184,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:60</li>
+									<li>Defined in drawing/drawing.ts:61</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -220,7 +221,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:68</li>
+									<li>Defined in drawing/drawing.ts:69</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -254,7 +255,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:80</li>
+									<li>Defined in drawing/drawing.ts:81</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -285,7 +286,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:35</li>
+									<li>Defined in drawing/drawing.ts:36</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -318,7 +319,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:43</li>
+									<li>Defined in drawing/drawing.ts:44</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -349,7 +350,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:52</li>
+									<li>Defined in drawing/drawing.ts:53</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -390,7 +391,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:75</li>
+									<li>Defined in drawing/drawing.ts:76</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -423,7 +424,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:110</li>
+									<li>Defined in drawing/drawing.ts:111</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -446,7 +447,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:98</li>
+									<li>Defined in drawing/drawing.ts:99</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -455,6 +456,39 @@
 									<a href="drawing.drawingcontext.html#drawrectangle">drawRectangle</a>, <a href="drawing.drawingcontext.html#drawellipse">drawEllipse</a> and <a href="drawing.drawingcontext.html#drawgeometry">drawGeometry</a> will not be stroked.</p>
 								</div>
 							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
+					<a name="placehighlight" class="tsd-anchor"></a>
+					<h3>place<wbr>Highlight</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
+						<li class="tsd-signature tsd-kind-icon">place<wbr>Highlight<span class="tsd-signature-symbol">(</span>highlight<span class="tsd-signature-symbol">: </span><a href="../classes/drawing.highlight.html" class="tsd-signature-type">Highlight</a>, settings<span class="tsd-signature-symbol">?: </span><a href="drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in drawing/drawing.ts:142</li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Places a highlight on the plot. The final position and alignment will be determined by the current transformation stack.
+										Highlights associated with measurement values will be shown if the associated measurement is activated by interactive elements in a report.
+									Highlights can also be associated with tooltips can be selected by the user and will be displayed in PiWeb Monitor.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>highlight: <a href="../classes/drawing.highlight.html" class="tsd-signature-type">Highlight</a></h5>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> settings: <a href="drawing.geometrydrawingsettingsdescription.html" class="tsd-signature-type">GeometryDrawingSettingsDescription</a></h5>
+								</li>
+							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
 					</ul>
@@ -469,7 +503,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:134</li>
+									<li>Defined in drawing/drawing.ts:135</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -492,7 +526,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:122</li>
+									<li>Defined in drawing/drawing.ts:123</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -522,7 +556,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:128</li>
+									<li>Defined in drawing/drawing.ts:129</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -551,7 +585,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:115</li>
+									<li>Defined in drawing/drawing.ts:116</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -579,7 +613,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:104</li>
+									<li>Defined in drawing/drawing.ts:105</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -608,7 +642,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/drawing.ts:92</li>
+									<li>Defined in drawing/drawing.ts:93</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -712,6 +746,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
 								<a href="drawing.drawingcontext.html#nopen" class="tsd-kind-icon">no<wbr>Pen</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-interface">
+								<a href="drawing.drawingcontext.html#placehighlight" class="tsd-kind-icon">place<wbr>Highlight</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
 								<a href="drawing.drawingcontext.html#pop" class="tsd-kind-icon">pop</a>
